[gd_scene load_steps=14 format=3 uid="uid://6srte17tc7yn"]

[ext_resource type="PackedScene" uid="uid://cgw47buhjmb5u" path="res://Objects/Board.tscn" id="1_6ql8c"]
[ext_resource type="Script" path="res://Scripts/BoardManager.gd" id="2_admdy"]
[ext_resource type="Script" path="res://Scripts/CombatManager.gd" id="2_y631b"]
[ext_resource type="Script" path="res://Scripts/Camera.gd" id="6_lhvja"]
[ext_resource type="PackedScene" uid="uid://cdbjt1ss1obq2" path="res://Objects/ui_manager.tscn" id="8_njx32"]
[ext_resource type="Script" path="res://Objects/AIManager.gd" id="10_pb5fx"]
[ext_resource type="PackedScene" uid="uid://cwaxyljhavuqu" path="res://Objects/cursor_manager.tscn" id="19_c8hgr"]
[ext_resource type="Script" path="res://Scripts/CardManager.gd" id="19_wkqhb"]
[ext_resource type="Texture2D" uid="uid://8t8v2hrwwtyt" path="res://Sprites/skybox.png" id="21_flwys"]
[ext_resource type="Script" path="res://Scripts/Pathfinder.gd" id="28_flbwc"]

[sub_resource type="PanoramaSkyMaterial" id="PanoramaSkyMaterial_l2ouy"]
panorama = ExtResource("21_flwys")

[sub_resource type="Sky" id="Sky_47m0q"]
sky_material = SubResource("PanoramaSkyMaterial_l2ouy")

[sub_resource type="Environment" id="Environment_6dbpa"]
background_mode = 2
sky = SubResource("Sky_47m0q")
ambient_light_source = 2
ambient_light_color = Color(1, 1, 1, 1)

[node name="GameManager" type="Node3D"]

[node name="BoardManager" type="Node3D" parent="."]
script = ExtResource("2_admdy")

[node name="CombatManager" type="Node3D" parent="BoardManager"]
script = ExtResource("2_y631b")

[node name="Boardblend" parent="BoardManager" instance=ExtResource("1_6ql8c")]

[node name="CursorManager" parent="BoardManager" instance=ExtResource("19_c8hgr")]

[node name="CardManager" type="Node3D" parent="BoardManager"]
script = ExtResource("19_wkqhb")

[node name="Tiles" type="Node3D" parent="BoardManager"]

[node name="CardPieces" type="Node3D" parent="BoardManager"]

[node name="Camera" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)
script = ExtResource("6_lhvja")

[node name="Camera" type="Camera3D" parent="Camera"]
transform = Transform3D(1, 0, 0, 0, 0.866025, 0.5, 0, -0.5, 0.866025, 0, 6.07098, 6.69037)

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_6dbpa")

[node name="UIManager" parent="." instance=ExtResource("8_njx32")]

[node name="Pathfinder" type="Node3D" parent="."]
script = ExtResource("28_flbwc")

[node name="AIManager" type="Node3D" parent="."]
script = ExtResource("10_pb5fx")
